erDiagram
    SUCURSAL_F4_EAM_S4 {
        NUMERIC SUCURSAL_ID PK
        VARCHAR CLAVE
        BIT ES_TALLER
        BIT ES_VENTA
        VARCHAR NOMBRE
        FLOAT LATITUD
        FLOAT LONGITUD
        VARCHAR URL
    }

    SUCURSAL_TALLER_F4_EAM_S4 {
        NUMERIC SUCURSAL_ID PK, FK
        NUMERIC DIA_DESCANSO
        VARCHAR TELEFONO_ATENCION
    }

    SUCURSAL_VENTA_F4_EAM_S4 {
        NUMERIC SUCURSAL_ID PK, FK
        TIME HORA_APERTURA
        TIME HORA_CIERRE
    }

    LAPTOP_F4_EAM_S4 {
        NUMERIC LAPTOP_ID PK, FK
        VARCHAR NUM_SERIE
        NUMERIC CANTIDAD_RAM
        VARCHAR CARACTERISTICAS_EXTRAS
        NUMERIC TIPO_TARJETA_VIDEO_ID FK
        NUMERIC TIPO_PROCESADOR_ID FK
        NUMERIC TIPO_ALMACENAMIENTO_ID FK
        NUMERIC TIPO_MONITOR_ID FK
        NUMERIC LAPTOP_REEMPLAZO_ID FK
    }

    LAPTOP_F5_EAM_S4 {
        NUMERIC LAPTOP_ID PK
        BLOB FOTO
    }

    SERVICIO_LAPTOP_F4_EAM_S4 {
        NUMERIC NUM_SERVICIO PK
        NUMERIC LAPTOP_ID PK
        NUMERIC IMPORTE
        VARCHAR DIAGNOSTICO
        BLOB FACTURA
        NUMERIC SUCURSAL_ID FK
    }

    STATUS_LAPTOP {
        NUMERIC STATUS_LAPTOP_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_PROCESADOR_R_EAM_S4 {
        NUMERIC TIPO_PROCESADOR_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_TARJETA_VIDEO_R_EAM_S4 {
        NUMERIC TIPO_TARJETA_VIDEO_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_ALMACENAMIENTO_R_EAM_S4 {
        NUMERIC TIPO_ALMACENAMIENTO_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_MONITOR_R_EAM_S4 {
        NUMERIC TIPO_MONITOR_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    SUCURSAL_F4_EAM_S4 ||--o| SUCURSAL_TALLER_F4_EAM_S4 : "Subtype"
    SUCURSAL_F4_EAM_S4 ||--o| SUCURSAL_VENTA_F4_EAM_S4 : "Subtype"
    LAPTOP_F5_EAM_S4 ||--o| LAPTOP_F4_EAM_S4 : "validates LAPTOP_ID"
    LAPTOP_F5_EAM_S4 o|--o| LAPTOP_F4_EAM_S4 : "validates LAPTOP_REEMPLAZO_ID"
    SUCURSAL_TALLER_F4_EAM_S4 ||--o{ SERVICIO_LAPTOP_F4_EAM_S4 : "performs"
    TIPO_PROCESADOR_R_EAM_S4 ||--o{ LAPTOP_F4_EAM_S4 : "has"
    TIPO_TARJETA_VIDEO_R_EAM_S4 ||--o{ LAPTOP_F4_EAM_S4 : "has"
    TIPO_ALMACENAMIENTO_R_EAM_S4 ||--o{ LAPTOP_F4_EAM_S4 : "has"
    TIPO_MONITOR_R_EAM_S4 ||--o{ LAPTOP_F4_EAM_S4 : "has"
